@startuml

' This is the PlantUML (https://plantuml.com/) source used to generate
' the (somewhat pragmatic) UML diagram of the hierarchy of preconditions
' (Diagram.png). Said diagram can be regenerated from this source at
' https://plantuml-editor.kkeisuke.com/ or with the PhpStorm plugin at
' https://plugins.jetbrains.com/plugin/7017-plantuml-integration.

scale 1.25

title Domain Preconditions

interface PreconditionInterface {
    {static} +getName()
    {static} +getDescription()
    +getStatusMessage()
    +isFulfilled($activeDir, $stagingDir) : bool
    +assertIsFulfilled($activeDir, $stagingDir) : void
}

abstract AbstractPrecondition implements PreconditionInterface {
    -PreconditionInterface[] $children
    #getFulfilledStatusMessage()
    #getUnfulfilledStatusMessage()
}

class BeginnerPreconditions extends AbstractPrecondition {
    CommonPreconditions
    StagingDirDoesNotExist
}
BeginnerPreconditions --* CommonPreconditions

class StagerPreconditions extends AbstractPrecondition {
    CommonPreconditions
    StagingDirIsReady
}
StagerPreconditions --* CommonPreconditions
StagerPreconditions --* StagingDirIsReady

class CommitterPreconditions extends AbstractPrecondition {
    CommonPreconditions
    StagingDirIsReady
}
CommitterPreconditions --* CommonPreconditions
CommitterPreconditions --* StagingDirIsReady

class CleanerPreconditions extends AbstractPrecondition {
    CommonPreconditions
    StagingDirIsReady
}
CleanerPreconditions --* CommonPreconditions
CleanerPreconditions --* StagingDirIsReady

class CommonPreconditions extends AbstractPrecondition {
    ComposerIsAvailable
    ActiveDirExists
    ActiveDirIsWritable
    ActiveAndStagingDirsAreDifferent
}

class StagingDirIsReady extends AbstractPrecondition {
    StagingDirExists
    StagingDirIsWritable
}

@enduml
